--- a/templates/docs/login.html
+++ b/templates/docs/login.html
@@ -5,7 +5,7 @@
 
 <div class="docs-toolbar-wrap">
     <div class="docs-shell docs-toolbar">
-        <div>
+        <div class="docs-toolbar-left">
             <h1 class="docs-title">{{ docs_text.auth_login_title }}</h1>
             <div class="docs-subtitle docs-path-breadcrumbs">
                 <a class="docs-path-link" href="{{ docs_base_url }}">docs</a>
